# linyaps-store

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SUMMARY.md  optimization_summary.txt  run_tests.sh
docs/: README.md  architecture-and-api.md  code-formatting.md  dbus-policy-and-polkit.md  dbus-wire-format.md  icon-source.md  id-set-optimization.md  kilnui-pitfalls.md  performance-optimizations.md  testing.md
lib/: linyaps_backend.c  linyaps_backend.h  linyaps_cli.c  linyaps_context.c  linyaps_dbus_msg.c  linyaps_local.c  linyaps_log.h  linyaps_private.h  linyaps_remote.c  linyaps_remote.h  linyaps_task.c  linyaps_types.h  linyaps_util.c
tests/: cli_test.c  test_backend.c  test_filter.c  test_id_set.c  test_perf_id_set.c  test_util.c
ui/: id_map.c  id_map.h  id_set.c  id_set.h  main.c  store_state.c  store_state.h  store_ui.c  store_ui.h
ui/views/: app_grid.c  ranking_view.c  sidebar.c  titlebar.c  updates_view.c  views_internal.h
